<resources>
    <string name="app_name">Pentagram</string>
    <string name="texto_boton_click">Click</string>
    <string name="texto_titulo">Hola Mundo ! :)</string>
    <string name="mensaje">Favorito :)</string>
    <string name="texto_accion">Acción</string>
    <string-array name="planetas">
        <item>Mercurio</item>
        <item>Venus</item>
        <item>Tierra</item>
        <item>Marte</item>
        <item>Júpiter</item>
    </string-array>
    <string name="titulo_tarjeta">"Android 5.0</string>
    <string name="descripción_tarjeta">Esta es la versión en la que se incluyó Material Design Android Lollipop</string>
    <string name="content_image">Imagen Lollipop</string>
</resources>
